# last-shot

./: .gitignore  README.md  STATUS.md  config.yaml  pyproject.toml
analysis/: capture_report.py  edge_report.py  live_capture_report.py  maker_sniper_backtest.py  replay.py
deploy/: lastshot-tracker.service  setup.sh
docs/: ORCHESTRATION.md
scripts/: place_test_order.py  politics_verdicts.py  set_v2_allowances.py  soak_report.sh
src/: betfair_client.py  categories.py  models.py  settings.py  storage.py
src/discovery/: betfair.py  polymarket.py  run.py
src/execution/: arb_executor.py  betfair_executor.py  latency.py  maker_executor.py  polymarket_executor.py
src/matching/: candidates.py  export.py  ingest.py  llm_matcher.py  review.py  run.py
src/signals/: engine.py  fees.py  paper_trader.py  settle.py  settle_live.py
src/tracking/: betfair_stream.py  normalize.py  polymarket_ws.py  run.py
tests/: test_candidates.py  test_engine.py  test_execution.py  test_fees.py  test_maker.py  test_normalize.py  test_settle.py
