[project]
name = "last-shot"
version = "0.1.0"
description = "Polymarket <-> Betfair price-discrepancy scanner and paper trader"
requires-python = ">=3.11"
dependencies = [
    "betfairlightweight>=2.20",
    "httpx>=0.27",
    "websockets>=12",
    "anthropic>=0.40",
    "rapidfuzz>=3.9",
    "pydantic>=2.7",
    "duckdb>=1.0",
    "pyarrow>=16",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23"]
# live Polymarket order placement only; shadow mode needs none of this
exec = ["py-clob-client>=0.17"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.uv]
package = false
